
# AC_ARG_WITH / AC_ARG_ENABLE in configure.ac
# [X] c14n
# [X] catalog
# [X] debugging
# [X] history
# [X] html
# [X] http
# [X] iconv
# [X] icu         - not minimum
# [X] ipv6
# [X] iso8859x
# [X] legacy
# [X] lzma
# [X] modules
# [X] output
# [X] pattern
# [X] push
# [ ] python
# [X] reader
# [X] readline
# [X] regexps
# [X] sax1
# [X] schemas
# [X] schematron
# [X] threads
# [X] thread-alloc
# [X] tls
# [X] valid
# [X] writer
# [X] xinclude
# [X] xpath
# [X] xptr
# [X] zlib

# [X] minimum
# [X] ipv6

option('c14n',
  type: 'feature',
  description: 'Canonical XML 1.0 support'
)

option('catalog',
  type: 'feature',
  description: 'XML Catalogs support'
)

option('debugging',
  type: 'feature',
  description: 'Debugging module and shell'
)

option('history',
  type: 'feature',
  description: 'History support for shell'
)

option('html',
  type: 'feature',
  description: 'HTML parser'
)

option('http',
  type: 'feature',
  description: 'HTTP support'
)

# TODO meson custom dependency
option('iconv',
  type: 'feature',
  description: 'iconv support'
)

option('icu',
  type: 'feature',
  description: 'ICU support'
)

option('ipv6',
  type: 'feature',
  description: 'Compilation of IPv6 code'
)

option('iso8859x',
  type: 'feature',
  description: 'ISO-8859-X support if no iconv'
)

option('legacy',
  type: 'feature',
  description: 'Maximum ABI compatibility'
)

option('lzma',
  type: 'feature',
  description: 'LZMA support'
)

option('modules',
  type: 'feature',
  description: 'Dynamic modules support'
)

option('output',
  type: 'feature',
  description: 'Serialization support'
)

option('pattern',
  type: 'feature',
  description: 'xmlPattern selection interface'
)

option('push',
  type: 'feature',
  description: 'push parser interfaces'
)

option('python',
  type: 'feature',
  description: 'Python bindings'
)

option('reader',
  type: 'feature',
  description: 'xmlReader parsing interface'
)

option('readline',
  type: 'feature',
  description: 'use readline for shell history'
)

option('regexps',
  type: 'feature',
  description: 'Regular expressions support'
)

option('sax1',
  type: 'feature',
  description: 'Older SAX1 interface'
)

option('schemas',
  type: 'feature',
  description: 'XML Schemas 1.0 and RELAX NG support'
)

option('schematron',
  type: 'feature',
  description: 'Schematron support'
)

option('threads',
  type: 'feature',
  description: 'Multithreading support'
)

option('thread-alloc',
  type: 'feature',
  description: 'per-thread malloc hooks'
)

option('tls',
  type: 'feature',
  description: 'thread-local storage'
)

option('valid',
  type: 'feature',
  description: 'DTD validation support'
)

option('writer',
  type: 'feature',
  description: 'xmlWriter serialization interface'
)

option('xinclude',
  type: 'feature',
  description: 'XInclude 1.0 support'
)

option('xpath',
  type: 'feature',
  description: 'XPath 1.0 support'
)

option('xptr',
  type: 'feature',
  description: 'XPointer support'
)

option('zlib',
  type: 'feature',
  description: 'ZLIB support'
)

option('minimum',
  type: 'boolean',
  value: false,
  description: 'build a minimally sized library'
)
